# xfce4-applet-diskspeed

./: AUTHORS  Makefile.am  README  configure.ac.in
icons/24x24/: Makefile.am
icons/48x48/: Makefile.am
icons/scalable/: Makefile.am
panel-plugin/: Makefile.am  applet-diskspeed.desktop.in  applet-netspeed.desktop.in  appletnetspeed.desktop.in.in  disk.c  disk.h  diskspeed.c  net.c  net.h  netspeed.c
po/: POTFILES.in
